# MagiCompiler

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/.codestyle/: copyright.hook
.github/workflows/: integration_test.yml
docs/: AutoCPUOffload.md  AutoCudaGraphDesign.md  WhyMagiDepyf.md
magi_compiler/: __init__.py  _api.py  _magi_register_custom_op.py  api.py  config.py
magi_compiler/cuda/: __init__.py  cudart.py
magi_compiler/magi_backend/: __init__.py  _cache_data_cls.py  compile_artifacts.py  cuda_graph_mgr.py  magi_backend.py  magi_compiler_base.py  partition_rules.py  piecewise_backend.py  piecewise_compiler.py
magi_compiler/magi_depyf/: __init__.py
magi_compiler/offload/: offload_warpper.py  profiler.py  scheduler.py
magi_compiler/passes/: __init__.py
magi_compiler/utils/: __init__.py  _utils.py  compile_counter.py  compile_time_monitor.py  envs.py  hash.py  logger.py  nvtx.py  ordered_set.py  singleton_meta.py
tests/: __init__.py  conftest.py  model_definition.py  utils.py
tests/api_tests/: test_dynamic_int_inputs.py  test_magi_compile.py  test_nested_compile.py  test_register_custom_op.py
tests/feature_tests/: test_autograd_function_cache_flag.py  test_capture_scalar.py  test_compile_artifacts.py  test_cpu_offload.py  test_cuda_graph.py  test_restart_analysis_cache.py  test_transformer_cache_reuse.py
tests/model_tests/: test_mlp_infer.py  test_mlp_training.py  test_rms_norm_infer.py
tests/torch_native_tests/: test_symbolic_dim_ability.py
(+81 files in other folders)
