[project]
name = "magi_compiler"
dynamic = ["version"]
description = "A plug-and-play compiler that delivers free-lunch optimizations for both inference and training."
authors = [
    {name = "Hongyu Jia", email = "jiahy@sand.ai"},
    {name = "Zhiyao Cen", email = "2523403608@qq.com"},
    {name = "Taoran Wang", email = "wangtaoran0504nb@outlook.com"},
    {name = "Yunbo Zhang", email = "mistbd@qq.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SandAI-org/MagiCompiler/"
"Bug Tracker" = "https://github.com/SandAI-org/MagiCompiler/issues"

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch",
    "ninja",
    "packaging",
    "cuda-python",
    "seaborn"
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
vcs = "git"
default-version = "1.0.0"

[tool.versioningit.write]
file = "magi_compiler/_version.py"
encoding = "utf-8"
template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["magi_compiler*"]
exclude = [
    "build*",
    "tests*",
    "dist*",
    "docs*",
    "tools*",
    "assets*",
]
